# museionExporter

./: .gitignore  README.md  pyproject.toml  test.py
MuseionExporter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
museionExporter/: exportTypes.py  process_file.py
museionExporter/export_dwc/: pipeline.py
museionExporter/export_dwc/columns/: col11_occurrenceRemarks.py  col12_verbatimIdentification.py  col1_occurrenceID.py  col2_scientificName.py  col6_dateIdentified.py  col7_locality.py
museionExporter/export_jacq/: pipeline.py
museionExporter/export_jacq/columns/: col13_Datum2.py  col14_det.py  col16_typus.py  col22_Habitat.py  col23_Habitus.py  col25_col32_coords.py  col2_HerbNummer.py  col34_quadrant.py  col36_col37_altitude.py  col38_digital_image.py  col3_collectionID.py  col5_status.py  col6_taxon.py  col7_Sammler.py  col9_series_number.py
museionExporter/export_pladias/: pipeline.py
museionExporter/export_pladias/columns/: col1.py  col12.py  col13.py  col14.py  col17.py  col18.py  col2.py  col3.py  col4.py  col5.py  col6.py  col7.py
museionExporter/workers/: dwc_writer.py  excel_reader.py  excel_writer.py
museionexporter/: exportTypes.py  process_file.py
museionexporter/export_cetaf/: __init__.py  pipeline.py
museionexporter/export_cetaf/columns/: __init__.py  col15_verbatimEventDate.py  col1_id.py
museionexporter/export_dwc/: pipeline.py
museionexporter/export_dwc/columns/: base.py  (+13 more)
museionexporter/export_jacq/: pipeline.py
museionexporter/export_pladias/: pipeline.py
museionexporter/workers/: excel_reader.py  excel_writer.py
(+19 files in other folders)
